# MLOps_Team24

./: # ml_pipeline.py  .dvcignore  .gitattributes  .gitignore  00_START_HERE.md  ANALISIS_COMPLETO_RESUMEN.md  Acoustic Features.csv.dvc  CHANGELOG.md  DIAGNOSTIC_CHECKLIST.md  Dockerfile  Dockerfile.mlflow  Fase1_equipo24.ipynb  Makefile  MakefileGitOK  NoteBook Testing.ipynb  PACKAGE_INDEX.md  QUICK_START.md  README.md  README_ANALYSIS.md  README_INDEX.md  SMOKE_TESTS_SETUP.md  SOLUTION_1_README.md  Untitled.ipynb  add_model_logging.py  analyze_1_dataset_distribution.py  analyze_2_confusion_matrix.py  analyze_3_sample_audio_features.py  analyze_4_feature_importance.py  cleanup_smart.py  compare_scalers.py  config.env.example  data.dvc  debug_app_features.json  debug_model_features.json  docker-compose.yml  dvc.yaml  enable_mlflow_sklearn.py  feature_engineering.py  fix_final_warning.py  fix_mlflow_warnings.py  (+32 more)
.dvc/: config
.virtual_documents/: Fase1_equipo24.ipynb  Untitled.ipynb
acoustic_ml/: __init__.py  config.py  datase_v2.py  dataset.py  features.py  inference.py  plots.py
app/: Dockerfile  main.py
artifacts/: sample_preview.csv
dashboard/: validate_cookiecutter.py
docs/: FASTAPI_SERVICE.md  api_endpoints.md  ml_pipeline.md  mlops_pipeline_diagram.mermaid  references.md  setup_guide.md
drift/: __init__.py  detect_drift.py  drift_baseline.json  drift_combined_drift.json  drift_config.py  drift_executive_summary.json  drift_mean_shift.json  drift_report.json  drift_scenarios_metadata.json  drift_streamlit_dashboard.py  drift_variance_change.json  (+7 more)
(+127 files in other folders)
