[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acoustic_ml"
version = "0.1.0"
description = "MLOps project for acoustic features analysis"
authors = [
    {name = "Team 24", email = "A01795838@tec.mx"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "jupyter>=1.0.0",
]

[tool.setuptools]
packages = ["acoustic_ml"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']